<resources>
    <string name="app_name">Here!</string>
    <string name="student_name_placeholder">Nom Prénom</string>
    <string name="student_photo_desc">Photo de l\'étudiant</string>
    <string name="students_of_class">Étudiants de %1$s</string>
    <string name="student_identifiant">Identifiant</string>
    <string name="present">Présent</string>
    <string name="absent">Absent</string>
    <string name="class_a">Classe A</string>
    <string name="class_b">Classe B</string>
    <string name="class_c">Classe C</string>
    <string name="search_button">Rechercher</string>
    <string name="search_class_hint">Rechercher une classe</string>
</resources>